--- a/main.html
+++ b/main.html
@@ -6,7 +6,10 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body
+	<h1>Sorted Articles</h1>
+
+    <ul id="band"></ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
