--- a/main.html
+++ b/main.html
@@ -6,8 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body
-	<h1>Sorted Articles</h1>
+<body>
 
     <ul id="band"></ul>
 	<!-- the entire body must be written by student -->
