--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <ul id="band"></ul>
+    <ul id="bands"></ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
